[gd_scene load_steps=12 format=3 uid="uid://dwkobg4lwotb4"]

[ext_resource type="Script" path="res://scripts/cat.gd" id="1_8nmec"]
[ext_resource type="Texture2D" uid="uid://bdx7esv74375f" path="res://images/cat_shadow.png" id="2_2gcnm"]
[ext_resource type="Script" path="res://scripts/beat_listener.gd" id="2_tahrt"]
[ext_resource type="SpriteFrames" uid="uid://bm1kk2enljgen" path="res://spriteframes/bob_spriteframes.tres" id="3_ig1vn"]
[ext_resource type="FontFile" uid="uid://cde38j2kselua" path="res://fonts/Silver.ttf" id="4_ly8h4"]
[ext_resource type="Texture2D" uid="uid://bq7a1ivifq5fn" path="res://images/cats/zoomba.png" id="5_5p78k"]
[ext_resource type="AudioStream" uid="uid://prcg27txatbj" path="res://sounds/cats/nyaa.wav" id="5_nktkl"]
[ext_resource type="Script" path="res://scripts/cat_movement.gd" id="6_2odn8"]
[ext_resource type="Script" path="res://scripts/cat_emote_label.gd" id="7_cj8xo"]
[ext_resource type="Texture2D" uid="uid://3dt6cb52ray8" path="res://images/cats/zoomba_up.png" id="7_ighyd"]

[sub_resource type="LabelSettings" id="LabelSettings_hn58j"]
font = ExtResource("4_ly8h4")
font_size = 19
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Cat" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_8nmec")

[node name="BeatListener" type="Node" parent="." groups=["beat_listeners"]]
script = ExtResource("2_tahrt")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("2_2gcnm")
offset = Vector2(0, 8)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_ig1vn")
animation = &"meow"

[node name="Movement" type="Node" parent="AnimatedSprite2D" node_paths=PackedStringArray("parent")]
script = ExtResource("6_2odn8")
parent = NodePath("../..")

[node name="Zoomba" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
show_behind_parent = true
texture = ExtResource("5_5p78k")

[node name="ZoombaUp" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
show_behind_parent = true
texture = ExtResource("7_ighyd")

[node name="EmoteLabel" type="Label" parent="."]
z_index = 1
custom_minimum_size = Vector2(128, 32)
offset_left = 7.0
offset_top = -22.0
offset_right = 71.0
offset_bottom = 10.0
text = "meow"
label_settings = SubResource("LabelSettings_hn58j")
autowrap_mode = 3
script = ExtResource("7_cj8xo")

[node name="Timer" type="Timer" parent="EmoteLabel"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_nktkl")
volume_db = -6.0
attenuation = 3.14159
max_polyphony = 48
panning_strength = 2.0
bus = &"Cats"

[connection signal="lured" from="." to="AnimatedSprite2D/Movement" method="_on_cat_lured"]
[connection signal="assigned_beat_played" from="BeatListener" to="." method="_on_beat_listener_assigned_beat_played"]
[connection signal="assigned_beat_played" from="BeatListener" to="AnimatedSprite2D/Movement" method="_on_beat_listener_assigned_beat_played"]
[connection signal="assigned_beat_played" from="BeatListener" to="EmoteLabel" method="_on_beat_listener_assigned_beat_played"]
[connection signal="beat_received" from="BeatListener" to="." method="_on_beat_listener_beat_received"]
[connection signal="beat_received" from="BeatListener" to="AnimatedSprite2D/Movement" method="_on_beat_listener_beat_received"]
[connection signal="timeout" from="EmoteLabel/Timer" to="EmoteLabel" method="_on_timer_timeout"]
